# snowclaw

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: AGENTS.md  CLAUDE.md
.claude/commands/: lint.md  review.md  simplify.md  test.md
docker/: DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  nginx.conf
openspec/changes/phase1-video-in-skeleton-out/: design.md  proposal.md  tasks.md
openspec/changes/phase1-video-in-skeleton-out/specs/api-backend/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/core-schemas/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/gpu-deployment/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/pipeline-orchestration/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/pose-estimation-2d/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/pose-estimation-3d/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/video-annotation/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/video-preprocessing/: spec.md
openspec/changes/phase1-video-in-skeleton-out/specs/viewer-3d-skeleton/: spec.md
tests/: test_integration.py
