[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowclaw"
version = "0.1.0"
description = "AI skiing & snowboarding instructor — biomechanics analysis engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["packages"]
