[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowclaw"
version = "0.1.0"
description = "AI skiing & snowboarding instructor — biomechanics analysis engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "NPY", # NumPy-specific rules
]
ignore = [
    "E501", # line too long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["biomechanics", "core", "video_pipeline", "pose_estimation", "video_annotation", "snowclaw", "api"]

[tool.hatch.build.targets.wheel]
packages = ["packages"]
