[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowclaw"
version = "0.1.0"
description = "AI skiing & snowboarding instructor — biomechanics analysis engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "easy-vitpose",
    "ffmpeg-python>=0.2.0",
    "filterpy>=1.4.5",
    "huggingface-hub>=1.6.0",
    "lap>=0.5.13",
    "numpy>=1.26",
    "onnxruntime>=1.24.3",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.0",
    "scikit-image>=0.26.0",
    "scipy>=1.11",
    "torch>=2.10.0",
    "ultralytics>=8.4.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "NPY", # NumPy-specific rules
]
ignore = [
    "E501", # line too long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["biomechanics", "core", "video_pipeline", "pose_estimation", "video_annotation", "snowclaw", "api"]

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.uv.sources]
easy-vitpose = { git = "https://github.com/JunkyByte/easy_ViTPose.git" }
